--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Blockchain Ball</title>
+  <title>Blockchain Ball testing</title>
   <style>
     body {
       background: #f0f0f0;
